# painel-orcamento-familiar

./: .gitignore  README.md  app.py  pyproject.toml
assets/datasets/: dataset_full.xlsx  dataset_test.xlsx
components/: card_credit.py  config.py  despesa.py  receita.py
